# OneLoop

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PRINCIPLES.md  README.md  TODO.md  flake.nix  ol
docs/: architecture.md  code-review.html  directives-overview.html  directives.md  index.html  oauth-plan.md  overview.html  plugins.md  style-guide.md
src/: agent.rs  app.rs  auth.rs  config.rs  directives.rs  main.rs  output.rs  providers.rs  sanitize.rs  tools.rs
src/agent/: compaction.rs  context.rs  evidence.rs  loop_state.rs  messages.rs  metrics.rs  mod.rs  orchestration.rs  session.rs  spinner.rs
src/ext/: mod.rs  prompts.rs  skills.rs
src/providers/: anthropic.rs  mock.rs  mod.rs  openai.rs  openrouter.rs  registry.rs  zai.rs
src/rpc/: mod.rs  protocol.rs
src/tools/: bash.rs  edit.rs  fetch_page.rs  mod.rs  read.rs  shell_query.rs  skill.rs  web_search.rs  write.rs
