[package]
name = "oneloop"
version = "0.1.0"
edition = "2024"
description = "A tiny, extensible coding agent"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = "0.4"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
