[package]
name = "oneloop"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "A tiny, extensible coding agent"
license = "MIT"

[lints.clippy]
collapsible_match = "deny"
manual_ok_or = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_collect = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
single_match = "deny"
uninlined_format_args = "deny"
unwrap_used = "deny"

[dependencies]
anyhow = "1"
chrono = "0.4"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rustyline = "18.0.1"
